@startuml
'https://plantuml.com/class-diagram

abstract class Abstractfile{
    String name, path
    + {abstract} String getStringTreeFolder()
    + String getPath()
    + {abstract} void add(Abstractfile f)
 }
class File
class Folder

Abstractfile <|-- File
Abstractfile <|-- Folder
Folder *--> Abstractfile:files


@enduml